# VectorIO

./: README.md  README_Template.md  pyproject.toml
PackageName/: __init__.py
examples/: example.csv  example.npz  example.ovito
src/VectorIO/: __init__.py
workflows/: python-tests.yml
