[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VectorIO"
version = "2025.1"
description = "A file writer & writer for OVITO vectors with their auxilliary information"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "[[License]]"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ovito >= 3.12.0",
]

[project.urls]
repository = "https://github.com/ovito-org/VectorIO"

[project.entry-points.'OVITO.FileWriter']
"Vector File Writer" = "VectorIO:VectorFileWriter"

[project.entry-points.'OVITO.FileReader']
"Vector File Reader" = "VectorIO:VectorFileReader"

[tool.setuptools.packages.find]
where = ["src"]
